--- a/installer/lua5.3/pom.xml
+++ b/installer/lua5.3/pom.xml
@@ -1,7 +1,7 @@
 <project xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
                              http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>com.github.mpeterv.argparse</groupId>
+	<groupId>com.github.mpeterv</groupId>
 	<artifactId>lua5.3-argparse</artifactId>
 	<version>${PROJECT_VERSION}</version>
 	<packaging>zip</packaging>
