Use one package for all LUA versions.

--- a/installer/pom.xml
+++ b/installer/pom.xml
@@ -2,7 +2,7 @@
                              http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>com.github.mpeterv</groupId>
-	<artifactId>lua5.1-argparse</artifactId>
+	<artifactId>argparse</artifactId>
 	<version>${PROJECT_VERSION}</version>
 	<packaging>zip</packaging>
 </project>
